--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -8,5 +8,10 @@
     "phone": "رقم الهاتف",
     "alreadyHaveAccount": "لديك حساب بالفعل؟",
     "noAccountYet": "ليس لديك حساب بعد؟"
+  },
+  "notFound": {
+    "title": "404 - الصفحة غير موجودة",
+    "description": "عذرًا، لا يمكننا العثور على الصفحة التي تبحث عنها.",
+    "home": "العودة إلى الصفحة الرئيسية"
   }
 }
