--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -8,5 +8,10 @@
     "phone": "Phone",
     "alreadyHaveAccount": "Already have an account?",
     "noAccountYet": "Don't have an account yet?"
+  },
+  "notFound": {
+    "title": "404 - Page Not Found",
+    "description": "Sorry, the page you are looking for does not exist.",
+    "home": "Go back home"
   }
 }
