--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -1,5 +1,5 @@
 {
-  "common": {
+  "app_name":"واتساب",
     "login": "تسجيل الدخول",
     "register": "إنشاء حساب",
     "email": "البريد الإلكتروني",
@@ -28,9 +28,9 @@
     "from_excel": "إرسال متغيرات من اكسل",
     "from_contacts": "إرسال من دفتر العناوين",
     "contacts": "دفتر العناوين",
-    "help": "مساعدة"
-  },
-  "notFound": {
+    "help": "مساعدة",
+    "sidebar_title":"الطرفية",
+    "notFound": {
     "title": "404 - الصفحة غير موجودة",
     "description": "عذرًا، لا يمكننا العثور على الصفحة التي تبحث عنها.",
     "home": "العودة إلى الصفحة الرئيسية"
