--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -1,38 +1,40 @@
 {
-  "app_name":"واتساب",
-    "login": "تسجيل الدخول",
-    "register": "إنشاء حساب",
-    "email": "البريد الإلكتروني",
-    "password": "كلمة المرور",
-    "name": "الاسم",
-    "phone": "رقم الهاتف",
-    "alreadyHaveAccount": "لديك حساب بالفعل؟",
-    "noAccountYet": "ليس لديك حساب بعد؟",
-    "language": "اللغة",
-    "contactSupport": "تواصل مع خدمة العملاء",
-    "dashboard": "لوحة التحكم",
-    "home": "الرئيسية",
-    "sendMessage": "إرسال رسائل واتساب",
-    "accountsFromContacts": "إرسال من دفتر العناوين",
-    "supportCards": "بطاقات الدعم",
-    "contactsBook": "دفتر العناوين",
-    "balance": "الرصيد",
-    "whatsappAccounts": "حسابات واتساب",
-    "addBalance": "اضافة الرصيد",
-    "requestAccount": "طلب حساب واتساب",
-    "sendMessages": "إرسال رسائل واتساب",
-    "statistics": "إحصائيات",
-    "tutorialVideo": "الفيديو التعليمي",
-    "whatsapp_send": "إرسال واتساب",
-    "send_messages": "إرسال رسائل واتساب",
-    "from_excel": "إرسال متغيرات من اكسل",
-    "from_contacts": "إرسال من دفتر العناوين",
-    "contacts": "دفتر العناوين",
-    "help": "مساعدة",
-    "sidebar_title":"الطرفية",
-    "notFound": {
+  "app_name": "واتساب",
+  "login": "تسجيل الدخول",
+  "register": "إنشاء حساب",
+  "email": "البريد الإلكتروني",
+  "password": "كلمة المرور",
+  "name": "الاسم",
+  "phone": "رقم الهاتف",
+  "alreadyHaveAccount": "لديك حساب بالفعل؟",
+  "noAccountYet": "ليس لديك حساب بعد؟",
+  "language": "اللغة",
+  "contactSupport": "تواصل مع خدمة العملاء",
+  "dashboard": "لوحة التحكم",
+  "home": "الرئيسية",
+  "sendMessage": "إرسال رسائل واتساب",
+  "accountsFromContacts": "إرسال من دفتر العناوين",
+  "supportCards": "بطاقات الدعم",
+  "contactsBook": "دفتر العناوين",
+  "balance": "الرصيد",
+  "whatsappAccounts": "حسابات واتساب",
+  "addBalance": "اضافة الرصيد",
+  "requestAccount": "طلب حساب واتساب",
+  "sendMessages": "إرسال رسائل واتساب",
+  "statistics": "إحصائيات",
+  "tutorialVideo": "الفيديو التعليمي",
+  "whatsapp_send": "إرسال واتساب",
+  "send_messages": "إرسال رسائل واتساب",
+  "from_excel": "إرسال متغيرات من اكسل",
+  "from_contacts": "إرسال من دفتر العناوين",
+  "contacts": "دفتر العناوين",
+  "help": "مساعدة",
+  "sidebar_title": "الطرفية",
+  "notFound": {
     "title": "404 - الصفحة غير موجودة",
     "description": "عذرًا، لا يمكننا العثور على الصفحة التي تبحث عنها.",
     "home": "العودة إلى الصفحة الرئيسية"
-  }
+  },
+  "acount_whatsapp": "حسابات الواتساب ",
+  "getAcount_whatsapp": "طلب حساب واتساب"
 }
