--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,38 +1,40 @@
 {
-  "app_name":"whatsapp",
-    "login": "Login",
-    "register": "Register",
-    "email": "Email",
-    "password": "Password",
-    "name": "Name",
-    "phone": "Phone",
-    "alreadyHaveAccount": "Already have an account?",
-    "noAccountYet": "Don't have an account yet?",
-    "language": "Language",
-    "contactSupport": "Contact Support",
-    "dashboard": "Dashboard",
-    "home": "Home",
-    "sendMessage": "Send WhatsApp Messages",
-    "accountsFromContacts": "Send from Contacts",
-    "supportCards": "Support Cards",
-    "contactsBook": "Contacts Book",
-    "balance": "Balance",
-    "whatsappAccounts": "WhatsApp Accounts",
-    "addBalance": "Add Balance",
-    "requestAccount": "Request WhatsApp Account",
-    "sendMessages": "Send WhatsApp Messages",
-    "statistics": "Statistics",
-    "tutorialVideo": "Tutorial Video",
-     "whatsapp_send": "Send WhatsApp",
-    "send_messages": "Send Messages",
-    "from_excel": "Send From Excel",
-    "from_contacts": "Send From Contacts",
-    "contacts": "Contacts Book",
-    "help": "Help",
-    "sidebar_title":"sidebar",
+  "app_name": "whatsapp",
+  "login": "Login",
+  "register": "Register",
+  "email": "Email",
+  "password": "Password",
+  "name": "Name",
+  "phone": "Phone",
+  "alreadyHaveAccount": "Already have an account?",
+  "noAccountYet": "Don't have an account yet?",
+  "language": "Language",
+  "contactSupport": "Contact Support",
+  "dashboard": "Dashboard",
+  "home": "Home",
+  "sendMessage": "Send WhatsApp Messages",
+  "accountsFromContacts": "Send from Contacts",
+  "supportCards": "Support Cards",
+  "contactsBook": "Contacts Book",
+  "balance": "Balance",
+  "whatsappAccounts": "WhatsApp Accounts",
+  "addBalance": "Add Balance",
+  "requestAccount": "Request WhatsApp Account",
+  "sendMessages": "Send WhatsApp Messages",
+  "statistics": "Statistics",
+  "tutorialVideo": "Tutorial Video",
+  "whatsapp_send": "Send WhatsApp",
+  "send_messages": "Send Messages",
+  "from_excel": "Send From Excel",
+  "from_contacts": "Send From Contacts",
+  "contacts": "Contacts Book",
+  "help": "Help",
+  "sidebar_title": "sidebar",
   "notFound": {
     "title": "404 - Page Not Found",
     "description": "Sorry, the page you are looking for does not exist.",
     "home": "Go back home"
-  }
+  },
+  "acount_whatsapp": "Acount Whatsapp",
+  "getAcount_whatsapp": "Get Acount Whatsapp"
 }
