--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -37,6 +37,7 @@
   },
   "acount_whatsapp": "حسابات الواتساب ",
   "getAcount_whatsapp": "طلب حساب واتساب",
+  "my_accounts":"حساباتي",
   "accounts.title": "حسابات واتساب",
   "accounts.enterPhone": "أدخل رقم الهاتف",
   "accounts.connect": "اتصال"
