--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -37,6 +37,7 @@
   },
   "acount_whatsapp": "Acount Whatsapp",
   "getAcount_whatsapp": "Get Acount Whatsapp",
+  "my_accounts":"My Accounts",
   "accounts.title": "WhatsApp Accounts",
   "accounts.enterPhone": "Enter phone number",
   "accounts.connect": "Connect"
