--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -37,10 +37,18 @@
   },
   "acount_whatsapp": "حسابات الواتساب ",
   "getAcount_whatsapp": "طلب حساب واتساب",
-  "my_accounts":"حساباتي",
+  "my_accounts": "حساباتي",
   "accounts.title": "حسابات واتساب",
   "accounts.enterPhone": "أدخل رقم الهاتف",
   "accounts.connect": "اتصال",
   "message_templates": "قوالب الرسائل",
-  "private_message_templates": "قوالب الرسائل الخاصة"
+  "private_message_templates": "قوالب الرسائل الخاصة",
+
+  "messageTemplatestitle": "قوالب الرسائل",
+  "messageTemplatestemplateTitle": "عنوان القالب",
+  "messageTemplatestemplateContent": "محتوى القالب",
+  "messageTemplatesaddButton": "إضافة قالب",
+  "messageTemplatesedit": "تعديل",
+  "messageTemplatesdelete": "حذف",
+  "scanCodeWhatsApp": "امسح الكود باستخدام واتساب"
 }
