--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -61,6 +61,7 @@
   "templatePeoplePagetemplateNamePlaceholder": "اسم القالب",
   "templatePeoplePagepersonNamePlaceholder": "اسم الشخص",
   "templatePeoplePagepersonPhonePlaceholder": "رقم الشخص",
+  "templatePeoplePagetemplate":"قائمة الأشخاص",
   "templatePeoplePageaddPerson": "إضافة شخص",
   "templatePeoplePagesaveTemplate": "حفظ القالب",
   "templatePeoplePagesavedTemplates": "القوالب المحفوظة",
