--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -61,6 +61,7 @@
   "templatePeoplePagetemplateNamePlaceholder": "Template Name",
   "templatePeoplePagepersonNamePlaceholder": "Person Name",
   "templatePeoplePagepersonPhonePlaceholder": "Phone Number",
+  "templatePeoplePagetemplate":"People List",
   "templatePeoplePageaddPerson": "Add Person",
   "templatePeoplePagesaveTemplate": "Save Template",
   "templatePeoplePagesavedTemplates": "Saved Templates",
