--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -45,12 +45,28 @@
   "private_message_templates": "Private Message Templates",
 
   "messageTemplatestitle": "Message Templates",
+  "messageTemplatesaddNew": "Add New Template",
+  "messageTemplatescancel": "Cancel",
+  "messageTemplateseditTemplate": "Edit Template",
+  "messageTemplatesnewTemplate": "New Template",
   "messageTemplatestemplateTitle": "Template Title",
+  "messageTemplatestitlePlaceholder": "Enter template title",
   "messageTemplatestemplateContent": "Template Content",
-  "messageTemplatesaddButton": "Add Template",
+  "messageTemplatescontentPlaceholder": "Enter template content",
+  "messageTemplatesadd": "Add",
+  "messageTemplatessave": "Save",
+  "messageTemplatessearch": "Search templates...",
+  "messageTemplatestotalTemplates": "Total Templates",
   "messageTemplatesedit": "Edit",
   "messageTemplatesdelete": "Delete",
+  "messageTemplatesconfirmDelete": "Are you sure you want to delete this template?",
+  "messageTemplatesconfirm": "Confirm",
+  "messageTemplatesclose": "Close",
+  "messageTemplatescopied": "Content copied",
+  "messageTemplatesaddButton": "Add Template",
   "scanCodeWhatsApp": "Scan the code using WhatsApp",
+  "messageTemplatescopy": "Copy",
+  "messageTemplatesdeleteWarning": "This action cannot be undone. Are you sure you want to delete this template?",
 
   "accountsPagetitle": "Connect WhatsApp Account",
   "accountsPagephonePlaceholder": "Phone Number",
