--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -77,15 +77,28 @@
   "accountsPageconnectButton": "اتصال",
   "accountsPagescanQrInstruction": "امسح الكود باستخدام واتساب",
 
-  "templatePeoplePagetitle": "قوالب بأسماء وأرقام",
-  "templatePeoplePagetemplateNamePlaceholder": "اسم القالب",
-  "templatePeoplePagepersonNamePlaceholder": "اسم الشخص",
-  "templatePeoplePagepersonPhonePlaceholder": "رقم الشخص",
   "templatePeoplePagetemplate":"قائمة الأشخاص",
-  "templatePeoplePageaddPerson": "إضافة شخص",
   "templatePeoplePagesaveTemplate": "حفظ القالب",
   "templatePeoplePagesavedTemplates": "القوالب المحفوظة",
   "templatePeoplePagepeopleCount": "شخص",
+  "templatePeoplePagetitle": "إدارة القوالب والأشخاص",
+  "templatePeoplePagenewTemplate": "قالب جديد",
+  "templatePeoplePagecreateNewTemplate": "إنشاء قالب جديد",
+  "templatePeoplePagetemplateName": "اسم القالب",
+  "templatePeoplePagetemplateNamePlaceholder": "مثال: فريق التسويق",
+  "templatePeoplePageaddPeople": "إضافة أشخاص",
+  "templatePeoplePagepersonNamePlaceholder": "اسم الشخص",
+  "templatePeoplePagepersonPhonePlaceholder": "رقم الهاتف",
+  "templatePeoplePageaddPerson": "إضافة شخص",
+  "templatePeoplePagebackToList": "العودة إلى القائمة",
+  "templatePeoplePagepeople": "الأشخاص",
+  "templatePeoplePagedeleteTemplate": "حذف القالب",
+  "templatePeoplePageviewAndEdit": "عرض وتعديل",
+  "templatePeoplePageSearchPlaceholder": "ابحث عن الأشخاص...",
+  "templatePeoplePageaddedPeople": "الأشخاص المضافون",
+  "templatePeoplePagenoTemplates": "لا توجد قوالب",
+  "templatePeoplePagecreateYourFirst": "قم بإنشاء أول قالب لك",
+  "templatePeoplePagestartCreating": "ابدأ الإنشاء",
 
   "contact_templates": "قوالب جهات الاتصال",
   "private_contact_templates": "قوالب جهات الاتصال الخاصة"
