--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -101,5 +101,7 @@
   "templatePeoplePagestartCreating": "ابدأ الإنشاء",
 
   "contact_templates": "قوالب جهات الاتصال",
-  "private_contact_templates": "قوالب جهات الاتصال الخاصة"
+  "private_contact_templates": "قوالب جهات الاتصال الخاصة",
+
+  "Scheduled_messages":"الرسائل المجدولة"
 }
