--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -1,6 +1,7 @@
 {
   "app_name": "واتساب",
   "login": "تسجيل الدخول",
+  "logout":"تسجيل الخروج",
   "register": "إنشاء حساب",
   "email": "البريد الإلكتروني",
   "password": "كلمة المرور",
@@ -12,7 +13,7 @@
   "contactSupport": "تواصل مع خدمة العملاء",
   "dashboard": "لوحة التحكم",
   "status": "الحالة",
-  "Connected":"متصل",
+  "Connected": "متصل",
   "home": "الرئيسية",
   "sendMessage": "إرسال رسائل واتساب",
   "accountsFromContacts": "إرسال من دفتر العناوين",
@@ -120,5 +121,62 @@
   "toggle_theme": "تبديل الوضع",
   "toggle_language": "تبديل اللغة",
   "open_sidebar": "فتح القائمة الجانبية",
-  "close_sidebar": "إغلاق القائمة الجانبية"
+  "close_sidebar": "إغلاق القائمة الجانبية",
+
+  "whatsapp_message_sender": "إرسال رسائل واتساب",
+  "scheduled_messages": "إرسال مجدول للرسائل",
+  "immediate_messages": "إرسال فوري للرسائل",
+  "active_account": "الحساب النشط",
+  "no_active_account": "لا يوجد حساب نشط",
+  "recipient_number": "رقم المستلم",
+  "add_recipient": "إضافة رقم",
+  "enter_valid_number": "يرجى إدخال رقم هاتف صحيح",
+  "number_already_exists": "هذا الرقم موجود بالفعل",
+  "select_groups": "اختر المجموعات",
+  "no_groups_found": "لا توجد مجموعات متاحة",
+  "message_content": "محتوى الرسالة",
+  "select_template": "اختر قالب رسالة",
+  "no_templates_found": "لا توجد قوالب متاحة",
+  "send_scheduled": "جدولة الرسالة",
+  "send_now": "إرسال الآن",
+  "sending": "جارٍ الإرسال...",
+  "success": "تم بنجاح!",
+  "error": "حدث خطأ",
+  "toastno_account": "يرجى اختيار حساب واتساب أولاً",
+  "toastno_recipients": "يرجى إضافة رقم مستلم أو مجموعة واحدة على الأقل",
+  "toastno_template": "يرجى اختيار قالب رسالة",
+  "toastno_message": "يرجى كتابة نص الرسالة",
+  "toastno_schedule_time": "يرجى اختيار وقت الإرسال المجدول",
+  "toastinvalid_schedule_time": "وقت الإرسال يجب أن يكون في المستقبل",
+  "toastmessage_scheduled": "تم جدولة الرسالة بنجاح ",
+  "toastmessage_sent": "تم إرسال الرسالة بنجاح ",
+  "toastsend_error": "فشل في الإرسال",
+
+  "scheduled": "الإرسال المجدول",
+  "immediate": "الإرسال الفوري",
+  "choose_scheduled_time": "اختر وقت مناسب للإرسال",
+  "send_message_now": "إرسال الرسالة الآن",
+
+  "select_send_time": "تحديد وقت الإرسال",
+  "choose_date_and_time": "اختر تاريخ ووقت الإرسال",
+  "message_will_be_sent_at": "سيتم الإرسال في:",
+
+  "example_phone_number": "مثال: +963912345678",
+  "add": "إضافة",
+
+  "select_group_to_send": "اختر مجموعة للإرسال",
+  "loading_groups": "جاري التحميل...",
+  "no_groups_available": "لا توجد مجموعات متاحة",
+  "members": "عضو",
+  
+  "write_your_message": "اكتب رسالتك",
+  "write_your_message_placeholder": "اكتب رسالتك هنا... يمكنك استخدام الإيموجي والنصوص الطويلة",
+  "characters": "حرف",
+  "ready_to_send": "✓ جاهز للإرسال",
+
+  "scheduling_message": "جاري الجدولة...",
+  "sending_message": "جاري الإرسال...",
+  "schedule_message": "جدولة الرسالة",
+  "send_message": "إرسال الرسالة",
+  "template": "قالب"
 }
