--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,6 +1,7 @@
 {
   "app_name": "whatsapp",
   "login": "Login",
+  "logout": "logout",
   "register": "Register",
   "email": "Email",
   "password": "Password",
@@ -13,7 +14,7 @@
   "dashboard": "Dashboard",
   "status": "Status",
   "home": "Home",
-  "Connected":"Connected",
+  "Connected": "Connected",
   "sendMessage": "Send WhatsApp Messages",
   "accountsFromContacts": "Send from Contacts",
   "supportCards": "Support Cards",
@@ -119,5 +120,62 @@
   "toggle_theme": "Toggle Theme",
   "toggle_language": "Toggle Language",
   "open_sidebar": "Open Sidebar",
-  "close_sidebar": "Close Sidebar"
+  "close_sidebar": "Close Sidebar",
+
+  "whatsapp_message_sender": "WhatsApp Message Sender",
+  "scheduled_messages": "Schedule Message",
+  "immediate_messages": "Send Immediately",
+  "active_account": "Active Account",
+  "no_active_account": "No active account found",
+  "recipient_number": "Recipient Number",
+  "add_recipient": "Add Recipient",
+  "enter_valid_number": "Please enter a valid phone number",
+  "number_already_exists": "This number already exists",
+  "select_groups": "Select Groups",
+  "no_groups_found": "No groups available",
+  "message_content": "Message Content",
+  "select_template": "Select Template",
+  "no_templates_found": "No templates available",
+  "send_scheduled": "Schedule Message",
+  "send_now": "Send Now",
+  "sending": "Sending...",
+  "success": "Success!",
+  "error": "Error",
+  "toastno_account": "Please select an active WhatsApp account first",
+  "toastno_recipients": "Please add at least one recipient number or group",
+  "toastno_template": "Please select a message template",
+  "toastno_message": "Please write the message content",
+  "toastno_schedule_time": "Please select a scheduled send time",
+  "toastinvalid_schedule_time": "Scheduled time must be in the future",
+  "toastmessage_scheduled": "Message scheduled successfully ✨",
+  "toastmessage_sent": "Message sent successfully 🚀",
+  "toastsend_error": "Failed to send message",
+
+  "scheduled": "Scheduled Send",
+  "immediate": "Immediate Send",
+  "choose_scheduled_time": "Choose a suitable time for sending",
+  "send_message_now": "Send message now",
+
+  "select_send_time": "Select Send Time",
+  "choose_date_and_time": "Choose date and time for sending",
+  "message_will_be_sent_at": "Message will be sent at:",
+
+  "example_phone_number": "Example: +963912345678",
+  "add": "Add",
+
+  "select_group_to_send": "Select a group to send to",
+  "loading_groups": "Loading groups...",
+  "no_groups_available": "No groups available",
+  "members": "member",
+
+  "write_your_message": "Write your message",
+  "write_your_message_placeholder": "Write your message here... You can use emojis and long texts",
+  "characters": "characters",
+  "ready_to_send": "✓ Ready to send",
+
+  "scheduling_message": "Scheduling message...",
+  "sending_message": "Sending message...",
+  "schedule_message": "Schedule Message",
+  "send_message": "Send Message",
+  "template": "Template"
 }
